# HHI_autoexcavator

./: CMakeLists.txt  README.md  package.xml  trigger_ros.ino
cfg/: param_reconfigure.cfg
include/: ground_control_system.h
launch/: 1cam.launch  1cam2lidars.launch  1cam2lidars_reverse.launch  1lidar.launch  1lidar_ouster.launch  2cams.launch  2cams1lidar.launch  2cams1lidar_ouster.launch  2cams2lidars.launch  2cams4lidars.launch  2lidars.launch  3cams.launch  3lidars.launch  4cams.launch  4cams2lidars.launch  hhi_gcs_cams.launch  hhi_gcs_launch.launch  hhi_gcs_lidars.launch  junha_1lidar.launch  snapshot_2lidars.launch  stream_2lidars.launch
msg/: hhi_command.msg  hhi_msgs.msg
src/: main.cpp
trigger_ros/: mkrzero_ros.ino
trigger_ros/mkrzero_ros/: mkrzero_ros.ino
